--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -3,12 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-@{
-    ViewData["Title"] = "Create";
-}
-<h1>Create</h1>
-<h4>Invite</h4>
+<h4>Invite User</h4>
 <hr />
 <div class="col-12">
     <div class="card custom-card">
@@ -20,7 +15,7 @@
             <form asp-action="Create">
                 <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
-                        <label class="mg-b-0">Email</label>
+                        <label class="mg-b-0">Email:</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
                         <input type="email" asp-for="InviteeEmail" class="form-control" placeholder="Enter email">
@@ -28,7 +23,7 @@
                 </div>
                 <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
-                        <label class="mg-b-0">Firstname</label>
+                        <label class="mg-b-0">First Name:</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
                         <input type="text" asp-for="InviteeFirstName" class="form-control" placeholder="Enter first name">
@@ -36,7 +31,7 @@
                 </div>
                 <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
-                        <label class="mg-b-0">Lastname</label>
+                        <label class="mg-b-0">Last Name:</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
                         <input type="text" asp-for="InviteeLastName" class="form-control" placeholder="Enter last name">
@@ -44,7 +39,7 @@
                 </div>
                 <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
-                        <label class="mg-b-0">Select Project</label>
+                        <label class="mg-b-0">Select Project:</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
                         <select class="form-control" asp-for="ProjectId" asp-items="@ViewBag.ProjectId">
@@ -54,7 +49,7 @@
                 </div>
                 <div class="row row-xs align-items-center mg-b-20 mb-2">
                     <div class="col-md-4">
-                        <label class="mg-b-0">Message</label>
+                        <label class="mg-b-0">Message:</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0">
                         <textarea id="editor" asp-for="Message" multiple="multiple" class="form-control"></textarea>
